[package]
name = "hellot-rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"
uuid =  { version = "0.8", features = ["v4"]}
sha2 = { version = "0.10", default-features = false }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"